--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css"/>
     <title>Juan Jose Gomez Vanolli</title>
   </head>
   <body>
@@ -131,5 +132,7 @@
         </tr>
 
     </table>
+
+    <h2> <a href="contact-me.html">Contact Me </a></h2>
   </body>
 </html>
