--- a/index.html
+++ b/index.html
@@ -16,74 +16,22 @@
     <title>Juan Jose Gomez Vanolli</title>
   </head>
   <body>
-    <div class="top-container">
-      <img class="top-cloud" src="Images/cloud.png" alt="cloud-img" />
-      <h1>I'm Juan Jose</h1>
-      <h2>a programmer<h2>
-      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img" />
-      <img src="Images/mountain.png" alt="mountain-img" />
-    </div>
-    <div class="middle-container">
-      <div class="profile">
-        <img class="profile-photo-top"
-          height="150px"
-          width="150"
-          src="Images/profile1.jpg"
-          alt="profile-photo"
-        />
-        <h2>Hello.</h2>
-        <p class="self-description">
-          Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna.
-          Non auctor, montes nulla distinctio.
-        </p>
-      </div>
-      <hr />
-      <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img
-            class="data"
-            src="https://cdn-icons-png.flaticon.com/512/1907/1907575.png"
-            alt="first-skill"
-          />
-          <h3>Lorem & Ipsum</h3>
-          <p >
-            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
-            nam, lectus ante, ut lorem eros.
-          </p>
-        </div>
-        <div class="skill-row">
-          <img
-            class="code"
-            src="https://cdn-icons-png.flaticon.com/512/2431/2431633.png"
-            alt="second-skill"
-          />
-          <h3>Lorem Ipsum Dolor</h3>
-          <p >
-            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-            eu, rutrum nam.
-          </p>
-        </div>
-      </div>
-      <hr />
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p class="contact-message">
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat.
-        </p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-      </div>
+    <div class="first-button">
+      <h1 class="first-cat">Water Bottle</h1>
+      <h1 class="btn">+</h1>
+      <h1 class="btn">-</h1>
     </div>
 
-    <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© Name Surname.</p>
+    <div class="first-button">
+      <h1 class="first-cat">Udemy Course</h1>
+      <h1 class="btn">+</h1>
+      <h1 class="btn">-</h1>
+    </div>
+
+    <div class="first-button">
+      <h1 class="first-cat">Gym</h1>
+      <h1 class="btn">+</h1>
+      <h1 class="btn">-</h1>
     </div>
   </body>
 </html>
