--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               width="200px"
               />
             </a>
-            <h2>Blog</h2>
+            <h2>Counter</h2>
           </div>
           <div class="col-lg-4 col-mg-6 col-sm-12 second-skill">
             <a href="ResearchPaper.html">  
@@ -153,7 +153,7 @@
               width="200px"
               />
             </a>
-            <h2>Research</h2>
+            <h2>Posts</h2>
           </div>
           <div class="col-lg-4 col-mg-6 col-sm-12 second-skill">
             <a href="NASA.html">  
@@ -165,7 +165,7 @@
               width="200px"
               />
             </a>
-            <h2>JavaScrypt</h2>
+            <h2>NASA API (NEOs) Rank </h2>
           </div>
         </div>
       </div>
