--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             </h2>
             <ul class="skills-list-text">
               <li>
-                <p>Seeking to leverage high proficiency in SQL, Python, JavaScript and CSS in a full-time career as a full-stack developer</p>
+                <p>Seeking to gain experience in WebDev, Software Architecture, Artificial Intelligence, and Data Engineering in a full-time developer career</p>
               </li>
               <li>
                 <p>
-                  Strong Electrical Engineering background, focused on C+ development.
+                  Strong Electrical Engineering background, focused on computer networks, development, and microcontrollers.
                 </p>
               </li>
             </ul>
@@ -126,7 +126,7 @@
     <section id="third-section">
       <div class="row">
         <div class="col-lg-12 col-lg-4 col-mg-6 col-sm-12">
-          <h1 id="service-title-text">Interests</h1>
+          <h1 id="service-title-text">Projects</h1>
         </div>
       </div>
       <div class="container-fluid">
