--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href=""> Who? </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href=""> Contact </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="CV.html"> CV </a>
+                <a class="nav-link" href="CV.html"> About Me </a>
               </li>
             </ul>
           </div>
@@ -138,7 +132,7 @@
               width="200px"
               />
             </a>
-            <h2>Personal Blog</h2>
+            <h2>Research Blog</h2>
           </div>
           
           <div class="col-lg-4 col-mg-6 col-sm-12 second-skill">
@@ -178,28 +172,16 @@
             <h2>ISS API Current Location </h2>
           </div>
           <div class="col-lg-4 col-mg-6 col-sm-12 second-skill">
-            <a href="PythonProjects.html">  
+            <a href="Blog.html">  
               <img
               class="offering-image"
-              src="images/WebScraperPy.png"
+              src="images/BJJicon.png"
               alt="iphone-mockup"
               height="200px"
               width="200px"
               />
             </a>
-            <h2>Python Web Scraper </h2>
-          </div>
-          <div class="col-lg-4 col-mg-6 col-sm-12 second-skill">
-            <a href="">  
-              <img
-              class="offering-image"
-              src="images/JavaApi.png"
-              alt="iphone-mockup"
-              height="200px"
-              width="200px"
-              />
-            </a>
-            <h2> Springboot API </h2>
+            <h2>BJJ Journal </h2>
           </div>
         </div>
       </div>
