--- a/ResearchPaper.html
+++ b/ResearchPaper.html
@@ -68,6 +68,12 @@
 
       <div class="movements">
         <div class="movements__row">
+          <img class="title-image" src="images/BJJResearchBlog1.jpg" alt="iphone-mockup" height="200px" width="200px" />
+          <div class="Research-Title">
+              <p>Brazilian Jiu-Jitsu: The Gentle Art</p>  
+          </div>
+        </div>
+        <div class="movements__row">
             <img class="title-image" src="images/Res1.PNG" alt="iphone-mockup" height="200px" width="200px" />
             <div class="Research-Title">
              <p> <a href="ResP1.html">Germany's Blitzkrieg (Lightning War) </a> </p>  
@@ -80,11 +86,7 @@
                 <p><a href="ResP2.html">Do you know what Neutron Stars are?</a></p>  
             </div>
         </div>
-        <div class="movements__row">
-          <img class="title-image" src="images/Res2.PNG" alt="iphone-mockup" height="200px" width="200px" />
-          <div class="Research-Title">
-              <p>What is the form of pace-time</p>  
-          </div>
+        
       </div>
         <!--<div class="movements__row">
             <p> "New Title Here" </p>
