--- a/ResearchPaper.html
+++ b/ResearchPaper.html
@@ -70,7 +70,7 @@
         <div class="movements__row">
           <img class="title-image" src="images/BJJResearchBlog1.jpg" alt="iphone-mockup" height="200px" width="200px" />
           <div class="Research-Title">
-              <p>Brazilian Jiu-Jitsu: The Gentle Art</p>  
+              <p><a href="ResP3.html">Brazilian Jiu-Jitsu: The Gentle Art</a></p>  
           </div>
         </div>
         <div class="movements__row">
