--- a/Blog.html
+++ b/Blog.html
@@ -66,6 +66,8 @@
 
       <section id="Research_content">
         <div class="research-box">
+          <h2 class="research-subtitle"> 01/23/2025 </h2>
+          <p class="research-body"> Yesterday I trained in the night and then today in the morning. Feeling great, been aplying the concept of "play" in the training. if you go 100% every time you are going to burn out, better to play around and try new stuff and make it fun.</p>
           <h2 class="research-subtitle"> 01/06/2025 </h2>
           <p class="research-body"> Have been away some time from blogin, I have uploading all my trainings in this new App called BJJ Buddy. I will try to upload it all to this website. 
           <br>I am actually thinking about creating a mini dashboard on this page for the stats such as submissions and taps and number of rounds. I have to look how to do it haha. 
