--- a/Blog.html
+++ b/Blog.html
@@ -66,26 +66,28 @@
 
       <section id="Research_content">
         <div class="research-box">
+          <h2 class="research-subtitle"> 01/25/2025 </h2>
+          <p class="research-body"> Today, we did cold plunges at the gym. It was really cool to spend some time with the bros and also great for the body. I had never done an ice bath before, and it was the weirdest experience. We did 3-minute sessions each. After the first 20 seconds, I lost all feeling of cold and instead felt a really hot sensation throughout my entire body, along with a burning pain all over my skin. I think that’s the mental challenge of the ice bath—you don’t endure the cold; you endure the pain on your skin. </p>
           <h2 class="research-subtitle"> 01/23/2025 </h2>
-          <p class="research-body"> Yesterday I trained in the night and then today in the morning. Feeling great, been aplying the concept of "play" in the training. if you go 100% every time you are going to burn out, better to play around and try new stuff and make it fun.</p>
+          <p class="research-body"> Yesterday, I trained at night and then again this morning. Feeling great, I've been applying the concept of "play" in training. If you go 100% every time, you're going to burn out. It's better to play around, try new things, and make it fun.</p>
           <h2 class="research-subtitle"> 01/06/2025 </h2>
-          <p class="research-body"> Have been away some time from blogin, I have uploading all my trainings in this new App called BJJ Buddy. I will try to upload it all to this website. 
-          <br>I am actually thinking about creating a mini dashboard on this page for the stats such as submissions and taps and number of rounds. I have to look how to do it haha. 
-          <br>Nonetheless, have been focusing on gym strengh and training whenever I can. I feel motivated and super strong!, have already started to enjoy every part of the training which is amazing because I want to train all the time now.
-          <br>Have been practicing a lot of judo takedowns, I am starting to et the theory, I need to find a training partner or somw way to practice the throws every day. </p>
+          <p class="research-body"> I've been away from blogging for some time. I've been uploading all my training sessions in this new app called BJJ Buddy. I will try to upload everything to this website. 
+          <br>I am actually thinking about creating a mini dashboard on this page for stats such as submissions, taps, and the number of rounds. I need to figure out how to do it, haha. 
+          <br>Nonetheless, I've been focusing on gym strength and training whenever I can. I feel motivated and super strong! I've already started to enjoy every part of training, which is amazing because I want to train all the time now.
+          <br>I've been practicing a lot of judo takedowns. I am starting to get the theory, but I need to find a training partner or some way to practice the throws every day. </p>
           <h2 class="research-subtitle"> 01/06/2025 </h2>
-          <p class="research-body"> First class of the year, felt amazing. This year the goal is to roll until my belt turns purple. Right now I am blue 3 stripes, lets Gooooooooooo! </p>
+          <p class="research-body"> First class of the year felt amazing. This year, the goal is to roll until my belt turns purple. Right now, I am a blue belt with three stripes. Let's goooooooo! </p>
           <hr />
           <h2 class="research-subtitle"> 04/30/2024 </h2>
-          <p class="research-body"> Today we had a couple of graduations. I was so happy thinking that I would get my thirds stripe on my blue belt, nonetheless there was no recognition for me. I dont take it personal, I haven't been so constant as to defenitely get it, but I do feel that I have put the work in. Anyways, will use this "disapointment" to train even harder to get that stripe. </p>
+          <p class="research-body"> Today we had a couple of graduations. I was so happy thinking that I would get my third stripe on my blue belt. Nonetheless, there was no recognition for me. I don't take it personally; I haven't been consistent enough to definitely earn it, but I do feel that I've put in the work. Anyways, I will use this "disappointment" to train even harder to get that stripe. </p>
           <h2 class="research-subtitle"> 04/23/2024 </h2>
-          <p class="research-body"> Taking today as rest, will do some abs and stretch but no training today, life has got in the way. Balancing Work, Unversity, and personal life living alone with my girlfriend sometimes does take a heavy chunk of work, nonetheless it is defenitely worth it, for growth and happiness. </p>
+          <p class="research-body"> Taking today as a rest day. I will do some abs and stretching but no training today. Life has gotten in the way. Balancing work, university, and personal life while living alone with my girlfriend sometimes takes a heavy chunk of effort. Nonetheless, it is definitely worth it for growth and happiness. </p>
           <h2 class="research-subtitle"> 04/22/2024 </h2>
-          <p class="research-body"> Monday, and we start the week with good energy. Had a very cardio intense training today. Almost nailed a helicopter chocke on a friend, nonetheless I missed the arm trap to finish it, will work on it. </p>
+          <p class="research-body"> Monday, and we start the week with good energy. Had a very cardio-intensive training session today. Almost nailed a helicopter choke on a friend. Nonetheless, I missed the arm trap to finish it. I will work on it. </p>
           <h2 class="research-subtitle"> 04/20/2024 </h2>
-          <p class="research-body"> Yesterday I went out with my friends, had some beers and shots. Obviously today I will not train since I am not a teenager any more. I feel bad because with just one day of missing training I feel that I am letting myself and my goals down.... eitherway on Monday I will grind again! </p>
+          <p class="research-body"> Yesterday, I went out with my friends and had some beers and shots. Obviously, I will not train today since I am not a teenager anymore. I feel bad because with just one day of missing training, I feel like I am letting myself and my goals down. Either way, on Monday, I will grind again! </p>
           <h2 class="research-subtitle"> 04/19/2024 </h2>
-          <p class="research-body"> Creating this new journal, it will be my personal blog. I know nobody is going to see it, nonetheless it will defenitely help me mentally and also will track my progress.</p>
+          <p class="research-body"> Creating this new journal. It will be my personal blog. I know nobody is going to see it. Nonetheless, it will definitely help me mentally and also track my progress.</p>
         </div>
         
        
