--- a/WorldBankCountryDashboard.html
+++ b/WorldBankCountryDashboard.html
@@ -7537,7 +7537,7 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
   <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyBrka-9kOHknrtKhy9nsiV_PO7hqgbs09_w&s" width="70">
-<h5>For an interactive example of the dashboard I have deployed using streamlit: <a href="https://worldbank-dashboard-interactive.streamlit.app/">Interactive_Dashboard</a> </h5>
+<h5>For an interactive example of the dashboard I have deployed using streamlit: <a href="https://worldbankdashboard.streamlit.app/">Interactive_Dashboard</a> </h5>
 <br>
 <br>
 <h2 id="Tools-Leveraged:">Tools Leveraged:<a class="anchor-link" href="#Tools-Leveraged:">¶</a></h2><h5 id="--Pandas">- Pandas<a class="anchor-link" href="#--Pandas">¶</a></h5><h5 id="--Matplotlib">- Matplotlib<a class="anchor-link" href="#--Matplotlib">¶</a></h5><h5 id="--Requests">- Requests<a class="anchor-link" href="#--Requests">¶</a></h5><h5 id="--Json-data-loading">- Json data loading<a class="anchor-link" href="#--Json-data-loading">¶</a></h5><h5 id="--World-Bank-RESTful-API">- World Bank RESTful API<a class="anchor-link" href="#--World-Bank-RESTful-API">¶</a></h5>
