--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="col-lg-6 col-mg-12 col-sm-12 title-text-container">
             <h1>Juan Jose Gomez Vanolli</h1>  
             <h2 class="title-subtitle">Data Engineer @ IBM Consulting</h2>
-            <h2 class="title-subtitle">Brazilian Jiu Jitsu Purple Belt</h2>
+            <h2 class="title-subtitle">Brazilian Jiu Jitsu Blue Belt</h2>
 
           </div>
           <div class="col-lg-6 col-mg-12 col-sm-12 title-image-container">
